tests/baselines/reference/genericOfACloduleType2.errors.txt
genericOfACloduleType2.ts(10,12): error TS2345: Argument of type 'null' is not assignable to parameter of type 'C'.


==== genericOfACloduleType2.ts (1 errors) ====
    class G<T>{ bar(x: T) { return x; } }
    namespace M {
        export class C { foo() { } }
        export namespace C {
            export class X {
            }
        }
    
        var g1 = new G<C>();
        g1.bar(null).foo(); // no error
               ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'C'.
    }
    
    namespace N {
        var g2 = new G<M.C>()
    }